--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   diacritic: ^0.1.6
   sqflite_common_ffi: ^2.4.0+1
   mobile_scanner: ^7.1.2
+  crypto: ^3.0.7
 
 dev_dependencies:
   flutter_test:
