--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   sqflite_common_ffi: ^2.4.0+1
   mobile_scanner: ^7.1.2
   crypto: ^3.0.7
+  logger: ^2.6.2
+  path_provider: ^2.1.5
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
